Update unit and god css

--- a/src/app/auth/profile/components/indexes/indexes.component.html
+++ b/src/app/auth/profile/components/indexes/indexes.component.html
@@ -44,7 +44,7 @@
 						</app-alert>
 					</div>
 
-					<div *ngIf="!loading && indexes.length > 0">
+					<div *ngIf="indexes.length > 0">
 
 						<div class="indexes-table">
 							<table class="table">
