--- a/src/app/auth/profile/components/intel/intel.component.html
+++ b/src/app/auth/profile/components/intel/intel.component.html
@@ -51,6 +51,7 @@
 							<div *ngFor="let owner of index.stats.owners;">
 								<img src="../../assets/images/ally_ico.png"/> {{owner.alliance_name}}
 							</div>
+              <div class="hidden-xs hidden-sm">{{index.stats.total_reports}} reports indexed</div>
 						</div>
 					</mat-card>
 				</a>
