#22 Explicit V1 key import dialog

--- a/src/app/auth/confirm/confirm.component.html
+++ b/src/app/auth/confirm/confirm.component.html
@@ -1,5 +1,5 @@
 
-<app-alert *ngIf="success=='';" type="error" title="Please confirm your email address to continue using the GrepoData city indexer" [dismissible]="false">
+<app-alert *ngIf="success=='';" type="warning" title="Please confirm your email address to continue using the GrepoData city indexer" [dismissible]="false">
 	<h5>
 		You have received an email with an activation link from admin@grepodata.com <strong>(Also check your spam folder!)</strong>.
 		<br/><br/>
