--- a/src/app/auth/profile/components/intel/intel.component.html
+++ b/src/app/auth/profile/components/intel/intel.component.html
@@ -1,5 +1,17 @@
+<!--Get started card-->
+<mat-card class="index-card index-card-sm" *ngIf="!hasIntel && !hasIndexes">
+  <h2 class="gd-secondary">Getting started</h2>
+  <mat-card-content style="margin: 0 30px;">
+    <app-alert type="info" title="Welcome to your personal enemy intelligence overview" [dismissible]="false">
+      <div style="min-height: 73px !important;">
+        <h4>You can start collecting intel after installing our userscript. The intel you collect will show up here.</h4>
+        <p>Once you confirm your email address, you can also create or join an index. An index allows you to share your intel with other people. For example, you can create and share a new index with your alliance members and work together to collect enemy intelligence!</p>
+      </div>
+    </app-alert>
+  </mat-card-content>
+</mat-card>
 
-<mat-card class="index-card index-card-sm">
+<mat-card class="index-card index-card-sm" *ngIf="hasIntel || hasIndexes">
 	<h2 class="gd-secondary">Search in your intel</h2>
 	<app-index-search></app-index-search>
 </mat-card>
@@ -70,7 +82,16 @@
 			<mat-progress-bar style="margin-top: -10px;" mode="indeterminate"></mat-progress-bar>
 		</div>
 
-		<div *ngIf="!loading">
+    <div *ngIf="!loading && num_results <= 0">
+      <app-alert type="info" title="You have not yet indexed any reports" [dismissible]="false">
+        <div style="min-height: 73px !important;">
+          <h4>Install our userscript to start colleting intel.</h4>
+          <button class="btn btn-primary" routerLink="/profile/script">Install the city indexer userscript</button>
+        </div>
+      </app-alert>
+    </div>
+
+		<div *ngIf="!loading && num_results > 0">
 
 			<mat-paginator *ngIf="from > 0 || num_results > 15" [length]="num_results"
 			               [pageSize]="size"
